// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input allowClear should change type when click 1`] = `
<span
  class="m-design-input-affix-wrapper"
>
  <input
    class="m-design-input"
    title=""
    type="text"
    value="111"
  />
  <span
    class="m-design-input-suffix"
  >
    <span
      class="m-design-input-clear-icon"
      role="button"
      tabindex="-1"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Input allowClear should change type when click 2`] = `
<span
  class="m-design-input-affix-wrapper"
>
  <input
    class="m-design-input"
    title=""
    type="text"
    value=""
  />
  <span
    class="m-design-input-suffix"
  >
    <span
      class="m-design-input-clear-icon m-design-input-clear-icon-hidden"
      role="button"
      tabindex="-1"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Input allowClear should not show icon if defaultValue is undefined, null or empty string 1`] = `
<span
  class="m-design-input-affix-wrapper"
>
  <input
    class="m-design-input"
    title=""
    type="text"
    value=""
  />
  <span
    class="m-design-input-suffix"
  >
    <span
      class="m-design-input-clear-icon m-design-input-clear-icon-hidden"
      role="button"
      tabindex="-1"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Input allowClear should not show icon if defaultValue is undefined, null or empty string 2`] = `
<span
  class="m-design-input-affix-wrapper"
>
  <input
    class="m-design-input"
    title=""
    type="text"
    value=""
  />
  <span
    class="m-design-input-suffix"
  >
    <span
      class="m-design-input-clear-icon m-design-input-clear-icon-hidden"
      role="button"
      tabindex="-1"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Input allowClear should not show icon if defaultValue is undefined, null or empty string 3`] = `
<span
  class="m-design-input-affix-wrapper"
>
  <input
    class="m-design-input"
    title=""
    type="text"
    value=""
  />
  <span
    class="m-design-input-suffix"
  >
    <span
      class="m-design-input-clear-icon m-design-input-clear-icon-hidden"
      role="button"
      tabindex="-1"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Input allowClear should not show icon if value is undefined, null or empty string 1`] = `
<span
  class="m-design-input-affix-wrapper"
>
  <input
    class="m-design-input"
    title=""
    type="text"
    value=""
  />
  <span
    class="m-design-input-suffix"
  >
    <span
      class="m-design-input-clear-icon m-design-input-clear-icon-hidden"
      role="button"
      tabindex="-1"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Input allowClear should not show icon if value is undefined, null or empty string 2`] = `
<span
  class="m-design-input-affix-wrapper"
>
  <input
    class="m-design-input"
    title=""
    type="text"
    value=""
  />
  <span
    class="m-design-input-suffix"
  >
    <span
      class="m-design-input-clear-icon m-design-input-clear-icon-hidden"
      role="button"
      tabindex="-1"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Input allowClear should not show icon if value is undefined, null or empty string 3`] = `
<span
  class="m-design-input-affix-wrapper"
>
  <input
    class="m-design-input"
    title=""
    type="text"
    value=""
  />
  <span
    class="m-design-input-suffix"
  >
    <span
      class="m-design-input-clear-icon m-design-input-clear-icon-hidden"
      role="button"
      tabindex="-1"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Input rtl render component should be rendered correctly in RTL direction 1`] = `
<input
  class="m-design-input m-design-input-rtl"
  title=""
  type="text"
  value=""
/>
`;

exports[`Input rtl render component should be rendered correctly in RTL direction 2`] = `
<span
  class="m-design-input-group m-design-input-group-rtl"
/>
`;

exports[`Input should support maxLength 1`] = `
<input
  class="m-design-input"
  maxlength="3"
  title=""
  type="text"
  value=""
/>
`;

exports[`Input should support size 1`] = `
<input
  class="m-design-input m-design-input-lg"
  title=""
  type="text"
  value=""
/>
`;

exports[`Input should support size in form 1`] = `
<form
  class="m-design-form m-design-form-horizontal m-design-form-large"
>
  <div
    class="m-design-row m-design-form-item"
  >
    <div
      class="m-design-col m-design-form-item-control"
    >
      <div
        class="m-design-form-item-control-input"
      >
        <div
          class="m-design-form-item-control-input-content"
        >
          <input
            class="m-design-input m-design-input-lg"
            title=""
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</form>
`;
